--- a/App/Views/leftbar.twig
+++ b/App/Views/leftbar.twig
@@ -70,17 +70,17 @@
       {% endif %}
 
       <a href="/questions/all" class="list-group-item list-group-item-action {% if this_page.menu == 'questions_all' %}active{% endif %}">
-      	<span class="icon mr-3"><i class="fe fe-eye"></i></span>All Questions<br>
+      	All Questions<span class="icon ml-3"><i class="fe fe-eye"></i></span><br>
       	<small class="menu-description">View all questions from all topics</small>
       </a>
 
       <a href="/topics/all" class="list-group-item list-group-item-action {% if this_page.menu == 'all_topics' %}active{% endif %}">
-      	<span class="icon mr-3"><i class="fe fe-grid"></i></span>All Topics<br>
+      	All Topics<span class="icon ml-3"><i class="fe fe-grid"></i></span><br>
       	<small class="menu-description">View all topics and questions per each topic</small>
       </a>
 
       <a href="/users/all" class="list-group-item list-group-item-action {% if this_page.menu == 'all_users' %}active{% endif %}">
-        <span class="icon mr-3"><i class="fe fe-users"></i></span>All Users<br>
+        All Users<span class="icon ml-3"><i class="fe fe-users"></i></span><br>
         <small class="menu-description">View all users and find experts</small>
       </a>
   	</div>
