--- a/App/Views/Questions/stream.twig
+++ b/App/Views/Questions/stream.twig
@@ -49,7 +49,7 @@
           		<div class="float-right">
                     <div class="dropdown">
                         <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">
-                            <i class="fe fe-chevron-down mr-1"></i> Sorting: {{ this_page.order_name }}
+                             {{ this_page.order_name }} : Sorting  <i class="fe fe-chevron-down mr-1"></i>
                         </button>
                         <div class="dropdown-menu">
                             <a href="#" class="dropdown-item {% if this_page.order_name == 'Newest' %}font-weight-bold{% endif %}" onclick="sort_questions_by('{{ this_page.url }}', 'newest');">Newest</a>
