--- a/App/Views/Signin/signin.twig
+++ b/App/Views/Signin/signin.twig
@@ -67,13 +67,13 @@
               <div class="form-group">
                 <label class="form-label">
                   Password
-                  <a href="/password/forgot" class="float-right small" tabindex="4">I forgot password</a>
+                  <a href="/password/forgot" class="float-left small" tabindex="4">I forgot password</a>
                 </label>
                 <div class="input-icon">
-                  <input type="password" class="form-control" id="password" name="password" id="exampleInputPassword1" placeholder="Password" required="" tabindex="2">
                   <span class="input-icon-addon toogle-password">
                     <a href="#" onclick="tooglePassword();"><i class="fe fe-eye"></i></a>
                   </span>
+                  <input type="password" class="form-control" id="password" name="password" id="exampleInputPassword1" placeholder="Password" required="" tabindex="2">                  
                 </div>
                 <span id="errorpassword" class="error"></span>
               </div>
