--- a/App/Views/Admin/Pages/pages.twig
+++ b/App/Views/Admin/Pages/pages.twig
@@ -60,7 +60,7 @@
               </div>
             </form>
           </div>
-          <a href="/admin/pages/add" class="btn btn-primary ml-4"><i class="fe fe-plus mr-1"></i>Add new page</a>
+          <a href="/admin/pages/add" class="btn btn-primary">Add new page<i class="fe fe-plus ml-1"></i></a>
         </div>
       </div>
 
