--- a/App/Views/Admin/Topics/hidden.twig
+++ b/App/Views/Admin/Topics/hidden.twig
@@ -40,7 +40,7 @@
           {{ paginator.offset + 1 }} - {{ topics|length }} of {{ topics_number }} topics
         </div>
         <div class="page-options d-flex">
-          <a href="/admin/topics/index" class="btn btn-outline-primary ml-4"><i class="fe fe-arrow-left mr-1"></i>Back to active topics</a>
+          <a href="/admin/topics/index" class="btn btn-outline-primary">Back to active topics<i class="fe fe-arrow-left mr-1"></i></a>
         </div>
       </div>
 
