--- a/App/Views/Admin/Topics/topics.twig
+++ b/App/Views/Admin/Topics/topics.twig
@@ -52,7 +52,7 @@
               </div>
             </form>
           </div>
-          <a href="/admin/topics/add" class="btn btn-primary ml-4"><i class="fe fe-plus mr-1"></i>Add new topic</a>
+          <a href="/admin/topics/add" class="btn btn-primary">Add new topic<i class="fe fe-plus mr-1"></i></a>
         </div>
       </div>
 
