--- a/App/Views/Notifications/all.twig
+++ b/App/Views/Notifications/all.twig
@@ -39,7 +39,7 @@
 
             {% else %}
 
-              <div class="card pt-4 pl-4">
+              <div class="card pt-4 pr-4">
                 <p>No notifications currently.</p>
               </div>
 
