--- a/App/Views/Questions/view.twig
+++ b/App/Views/Questions/view.twig
@@ -297,7 +297,7 @@
 
 		      {% else %}
 
-						<div class="card pt-4 pl-4">
+				<div class="card pt-4 pr-4">
 		        	<p>No answers for that question.</p>
 		        </div>
 
