--- a/App/Views/Admin/Users/add.twig
+++ b/App/Views/Admin/Users/add.twig
@@ -15,7 +15,7 @@
           Add new user
         </h1>
         <div class="page-options d-flex">
-          <a href="/admin/users/index" class="btn btn-outline-primary ml-4"><i class="fe fe-arrow-left mr-1"></i>Back to all users</a>
+          <a href="/admin/users/index" class="btn btn-outline-primary ml-5">Back to all users <i class="fe fe-arrow-left mr-1"></i></a>
         </div>
       </div>
 
@@ -97,7 +97,7 @@
                     <small class="text-muted">
                       Enter user's birth date
                     </small>
-                    <input type="date" class="form-control mt-2" id="birth_date" name="birth_date" placeholder="User's birth_date" min='1899-01-01' max='{{ "now"|date("Y-m-d") }}' value="{{ values.birth_date }}">
+                    <input type="date" class="form-control mt-2 text-right" id="birth_date" name="birth_date" placeholder="User's birth_date" min='1899-01-01' max='{{ "now"|date("Y-m-d") }}' value="{{ values.birth_date }}">
                   </div>
                 </div>
               </div>
