--- a/App/Views/Admin/dashboard.twig
+++ b/App/Views/Admin/dashboard.twig
@@ -48,7 +48,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="card p-3">
             <div class="d-flex align-items-center">
-              <span class="stamp stamp-md {% if new_reports > 0%}bg-red{% endif %} mr-3">
+              <span class="stamp stamp-md {% if new_reports > 0%}bg-red{% endif %} ml-3">
                 <i class="fe fe-activity"></i>
               </span>
               <div>
@@ -62,7 +62,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="card p-3">
             <div class="d-flex align-items-center">
-              <span class="stamp stamp-md bg-secondary mr-3">
+              <span class="stamp stamp-md bg-secondary ml-3">
                 <i class="fe fe-settings"></i>
               </span>
               <div>
@@ -78,7 +78,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="card p-3">
             <div class="d-flex align-items-center">
-              <span class="stamp stamp-md bg-blue mr-3">
+              <span class="stamp stamp-md bg-blue ml-3">
                 <i class="fe fe-layout"></i>
               </span>
               <div>
@@ -94,7 +94,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="card p-3">
             <div class="d-flex align-items-center">
-              <span class="stamp stamp-md bg-blue mr-3">
+              <span class="stamp stamp-md bg-blue ml-3">
                 <i class="fe fe-users"></i>
               </span>
               <div>
@@ -108,7 +108,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="card p-3">
             <div class="d-flex align-items-center">
-              <span class="stamp stamp-md bg-blue mr-3">
+              <span class="stamp stamp-md bg-blue ml-3">
                 <i class="fe fe-help-circle"></i>
               </span>
               <div>
@@ -122,7 +122,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="card p-3">
             <div class="d-flex align-items-center">
-              <span class="stamp stamp-md bg-blue mr-3">
+              <span class="stamp stamp-md bg-blue ml-3">
                 <i class="fe fe-feather"></i>
               </span>
               <div>
@@ -136,7 +136,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="card p-3">
             <div class="d-flex align-items-center">
-              <span class="stamp stamp-md bg-blue mr-3">
+              <span class="stamp stamp-md bg-blue ml-3">
                 <i class="fe fe-grid"></i>
               </span>
               <div>
@@ -156,7 +156,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="card p-3">
             <div class="d-flex align-items-center">
-              <span class="stamp stamp-md bg-secondary mr-3">
+              <span class="stamp stamp-md bg-secondary ml-3">
                 <i class="fe fe-terminal"></i>
               </span>
               <div>
