--- a/App/Views/Pages/view.twig
+++ b/App/Views/Pages/view.twig
@@ -23,7 +23,7 @@
             </div>
           {% endif %}
 
-          <div class="card pt-4 pl-4">
+          <div class="card pt-4 pr-4">
             <p>{{ this_page.content|raw }}</p>
           </div>
 
