--- a/App/Views/Questions/stream.twig
+++ b/App/Views/Questions/stream.twig
@@ -78,7 +78,7 @@
 
           {% else %}
 
-            <div class="card pt-4 pl-4">
+            <div class="card pt-4 pr-4">
               <p>No questions found.</p>
             </div>
 
