--- a/App/Views/Topics/select.twig
+++ b/App/Views/Topics/select.twig
@@ -37,7 +37,7 @@
 		     		<div class="card-header">
               <h3 class="card-title">Choose topics which are interesting for you:</h3>
               <div class="card-options">
-								<button type="submit" id="followBtn" class="btn btn-primary ml-4 mr-5"><i class="fe fe-check mr-1"></i>Follow Topics</button>
+								<button type="submit" id="followBtn" class="btn btn-primary ml-4 mr-5">Follow Topics<i class="fe fe-check ml-1"></i></button>
               </div>
             </div>
 
