--- a/App/Views/Topics/view.twig
+++ b/App/Views/Topics/view.twig
@@ -63,7 +63,7 @@
 
 		      {% else %}
 
-						<div class="card pt-4 pl-4">
+				<div class="card pt-4 pr-4">
 		        	<p>No questions for that topic.</p>
 		        </div>
 
