--- a/App/Views/Users/settings.twig
+++ b/App/Views/Users/settings.twig
@@ -71,19 +71,19 @@
 
               <div class="pt-2">
                 {% if user.location %}
-                  <p class="mt-0 mb-0"><small><i class="fe fe-map-pin text-muted mr-1"></i> From {{ user.location }}</small></p>
+                  <p class="mt-0 mb-0"><small>From {{ user.location }}<i class="fe fe-map-pin text-muted ml-1"></i></small></p>
                 {% endif %}
                 {% if user.last_visit %}
-                  <p class="mt-0 mb-0"><small><i class="fe fe-activity text-muted mr-1"></i> Last activity {{ user.last_visit|timeago }}</small></p>
+                  <p class="mt-0 mb-0"><small>Last activity {{ user.last_visit|timeago }} <i class="fe fe-activity text-muted ml-1"></i></small></p>
                 {% endif %}
                 {% if user.signup_stamp %}
-                  <p class="mt-0 mb-0"><small><i class="fe fe-target text-muted mr-1"></i> Signed up {{ user.signup_stamp|timeago }}</small></p>
+                  <p class="mt-0 mb-0"><small>Signed up {{ user.signup_stamp|timeago }} <i class="fe fe-target text-muted ml-1"></i></small></p>
                 {% endif %}
               </div>
 
               {% if current_user.id == user.id %}
                 <div class="pt-4">
-                  <a href="/user/settings" class="btn btn-light btn-block"><i class="fe fe-edit-2"></i> Edit Profile</a>
+                  <a href="/user/settings" class="btn btn-light btn-block">Edit Profile <i class="fe fe-edit-2"></i></a>
                 </div>
               {% endif %}
             </div>
@@ -218,9 +218,9 @@
                             <label class="form-label mb-0" for="email_notifications">Email Notifications</label>
                             <small class="text-muted">If you enable that option - you will receive notifications to your email address.</small>
                             <label class="d-block custom-switch mt-2">
+                              <span class="custom-switch-description">Enable Notifications</span>
                               <input type="checkbox" name="email_notifications" id="email_notifications" class="custom-switch-input" {% if(user.email_notifications == 1) %}checked="checked"{% endif %}>
                               <span class="custom-switch-indicator"></span>
-                              <span class="custom-switch-description">Enable Notifications</span>
                             </label>
                           </div>
                         {% endif %}
