--- a/App/Views/Users/view.twig
+++ b/App/Views/Users/view.twig
@@ -37,19 +37,19 @@
 
               <div class="pt-2">
                 {% if user.location %}
-                  <p class="mt-0 mb-0"><small><i class="fe fe-map-pin text-muted mr-1"></i> From {{ user.location }}</small></p>
+                  <p class="mt-0 mb-0"><small>From {{ user.location }} <i class="fe fe-map-pin text-muted mr-1"></i></small></p>
                 {% endif %}
                 {% if user.last_visit %}
-                  <p class="mt-0 mb-0"><small><i class="fe fe-activity text-muted mr-1"></i> Last activity {{ user.last_visit|timeago }}</small></p>
+                  <p class="mt-0 mb-0"><small>Last activity {{ user.last_visit|timeago }} <i class="fe fe-activity text-muted ml-1"></i></small></p>
                 {% endif %}
                 {% if user.signup_stamp %}
-                  <p class="mt-0 mb-0"><small><i class="fe fe-target text-muted mr-1"></i> Signed up {{ user.signup_stamp|timeago }}</small></p>
+                  <p class="mt-0 mb-0"><small>Signed up {{ user.signup_stamp|timeago }} <i class="fe fe-target text-muted ml-1"></i></small></p>
                 {% endif %}
               </div>
 
               {% if current_user.id == user.id %}
                 <div class="pt-4">
-                  <a href="/user/settings" class="btn btn-light btn-block"><i class="fe fe-edit-2"></i> Edit Profile</a>
+                  <a href="/user/settings" class="btn btn-light btn-block">Edit Profile <i class="fe fe-edit-2"></i></a>
                 </div>
               {% endif %}
             </div>
@@ -158,7 +158,7 @@
 
           {% else %}
 
-            <div class="card pt-4 pl-4">
+            <div class="card pt-4 pr-4">
               {% if this_page.tab == 'topics' %}
                 <p>User does not follow any topic yet.</p>
               {% endif %}
