--- a/App/Views/base.twig
+++ b/App/Views/base.twig
@@ -72,7 +72,7 @@
                         <div class="dropdown">
                             <a href="#" class="nav-link pr-0 leading-none" data-toggle="dropdown">
                                 <span class="avatar" {% if current_user.photo %}style="color: transparent; background-image: url(/media/images/users/{{ current_user.photo }})"{% endif %}>{{ current_user.username|slice(0, 2)|upper }}</span>
-                                <span class="ml-2 d-none d-lg-block">
+                                <span class="mr-2 d-none d-lg-block">
                                 <span class="text-default">{{ current_user.username|slice(0, 20)|capitalize }}</span>
                                 <small class="d-block mt-1"><b>{{ current_user.points }} points</b></small>
                                 </span>
