--- a/App/Views/Questions/add.twig
+++ b/App/Views/Questions/add.twig
@@ -227,7 +227,7 @@
               <div class="col-sm-12">
               
                 <div class="form-group p-2">
-                  <label class="form-label mb-0" for="title">Step 1/3. Question title <span class="form-required">*</span> <pre class="p-1 form-label-small"><small><span id="q_title_counter">0</span>/{{ settings.question_max_title }}</pre></small></label>
+                  <label class="form-label mb-0" for="title"><pre class="p-1 form-label-small"><small><span id="q_title_counter">0</span>/{{ settings.question_max_title }}</pre>Step 1/3. Question title <span class="form-required">*</span></small></label>
                   <small class="text-muted">
                     Formulate the question in the way, in which it will be clear for others. <br> Add more information in description instead creating long titles. <br> With long questions you risk losing your reader's attention.
                   </small>
@@ -239,7 +239,7 @@
             <div class="row step-2 d-none">
               <div class="col-sm-12">
                 <div class="form-group p-2">
-                  <label class="form-label mb-0" for="description">Step 2/3. Question description and attachments <pre class="p-1 form-label-small"><small><span id="q_description_counter">0</span>/{{ settings.question_max_description }}</small></pre></label>
+                  <label class="form-label mb-0" for="description"><pre class="p-1 form-label-small"><small><span id="q_description_counter">0</span>/{{ settings.question_max_description }}</small></pre>Step 2/3. Question description and attachments </label>
                   <small class="text-muted">
                     Try to add more details to get accurate answers. <br> Do not forget that in stream are displayed only first 120 words of description. <br>You can mention someone by addig @ and his username, example: <b>@{{ current_user.username }}</b>
                   </small>
