--- a/App/Views/Admin/Questions/questions.twig
+++ b/App/Views/Admin/Questions/questions.twig
@@ -118,9 +118,9 @@
       
                       </td>
                       <td>
-                        <a href="/admin/questions/edit?id={{ question.id }}" class="btn btn-outline-primary btn-sm"><i class="fe fe-edit"></i> Edit</a>
-                        <a href="javascript:hideQuestion({{ question.id }})" class="btn btn-outline-danger btn-sm mt-3"><i class="fe fe-eye-off"></i> Hide</a>
-                        <a href="javascript:deleteQuestion({{ question.id }})" class="btn btn-outline-danger btn-sm mt-3"><i class="fe fe-trash-2"></i> Delete</a>
+                        <a href="/admin/questions/edit?id={{ question.id }}" class="btn btn-outline-primary btn-sm">Edit <i class="fe fe-edit"></i></a>
+                        <a href="javascript:hideQuestion({{ question.id }})" class="btn btn-outline-danger btn-sm mt-3">Hide <i class="fe fe-eye-off"></i></a>
+                        <a href="javascript:deleteQuestion({{ question.id }})" class="btn btn-outline-danger btn-sm mt-3">Delete <i class="fe fe-trash-2"></i></a>
                       </td>
 
                     </tr>
