--- a/App/Views/base.twig
+++ b/App/Views/base.twig
@@ -3,7 +3,7 @@
   Tab Size: 2 
 #}
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
